--- a/index.html
+++ b/index.html
@@ -1113,6 +1113,7 @@ html {
 }
 .prompt-suggestions-container {
     margin-bottom: 15px;
+    align-items: center;
 }
 
 .prompt-suggestions {
@@ -1180,6 +1181,36 @@ html {
 .refresh-suggestions:hover {
     text-decoration: underline;
 }
+.expand-btn {
+    position: absolute;
+    right: 15px;
+    top: 15px;
+    background: none;
+    border: none;
+    color: var(--primary);
+    cursor: pointer;
+    font-size: 16px;
+    z-index: 2;
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .expand-btn {
+        display: block;
+    }
+    
+    #prompt-textarea {
+        padding-right: 40px;
+    }
+}
+
+#fullscreen-textarea {
+    background: var(--bg);
+    color: var(--text);
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    outline: none;
+}
     </style>
 </head>
 <body>
@@ -1206,13 +1237,15 @@ html {
     </button>
 </div>
         	<button id="clear-btn" title="Clear Prompt"><i class="fas fa-trash"></i> Clear</button>
-            <div class="input-group">
-                <i class="fas fa-wand-magic-sparkles input-icon"></i>
-                <textarea id="prompt-textarea" placeholder="Describe your dream image in detail... (e.g. A cyberpunk cityscape at night with neon lights, 8k ultra detailed, cinematic lighting)"></textarea>
-                <div class="input-buttons">
-                    <button id="enhance-btn" title="Enhance Prompt"><i class="fas fa-brain"></i> Enhance</button>
-                    <button id="generate-btn"><i class="fas fa-magic-wand-sparkles"></i> Generate</button>
-                </div>
+<div class="input-group">
+    <i class="fas fa-wand-magic-sparkles input-icon"></i>
+    <textarea id="prompt-textarea" placeholder="Describe your dream image in detail... (e.g. A cyberpunk cityscape at night with neon lights, 8k ultra detailed, cinematic lighting)"></textarea>
+    <button class="expand-btn" id="expand-textarea-btn" title="Expand"><i class="fas fa-expand"></i></button>
+    <div class="input-buttons">
+        <button id="enhance-btn" title="Enhance Prompt"><i class="fas fa-brain"></i> Enhance</button>
+        <button id="generate-btn"><i class="fas fa-magic-wand-sparkles"></i> Generate</button>
+    </div>
+</div>
                 <div class="input-group">
     <!-- Existing input group code -->
 </div>
@@ -1627,7 +1660,21 @@ html {
             </div>
         </div>
     </div>
-    
+    <!-- Textarea Expansion Modal -->
+<div class="modal" id="textarea-modal">
+    <div class="modal-content" style="max-width: 100%; height: 100%; display: flex; flex-direction: column;">
+        <div class="modal-header">
+            <h3 class="modal-title"><i class="fas fa-edit"></i> Write Your Prompt</h3>
+            <button class="close-modal" id="close-textarea-modal">&times;</button>
+        </div>
+        <div class="modal-body" style="flex: 1; padding: 0;">
+            <textarea id="fullscreen-textarea" style="width: 100%; height: 100%; border: none; padding: 20px; resize: none;"></textarea>
+        </div>
+        <div class="modal-footer" style="justify-content: center;">
+            <button class="modal-btn modal-btn-primary" id="save-textarea-btn">Done</button>
+        </div>
+    </div>
+</div>
 <footer> 
     &copy; <span id="current-year"></span> RuangRiung AI Image Generator Ver.4.1.3. All rights reserved | 
     powered by <a href="https://pollinations.ai" target="_blank" class="footer-link">Pollinations.ai</a> | 
@@ -1700,6 +1747,47 @@ document.addEventListener('DOMContentLoaded', function() {
     const hdCheckbox = document.getElementById('hd');
     const enhanceDetailsCheckbox = document.getElementById('enhance-details');
     const safeFilterCheckbox = document.getElementById('safe-filter');
+    // Add these to your existing elements list
+const expandTextareaBtn = document.getElementById('expand-textarea-btn');
+const textareaModal = document.getElementById('textarea-modal');
+const fullscreenTextarea = document.getElementById('fullscreen-textarea');
+const closeTextareaModal = document.getElementById('close-textarea-modal');
+const saveTextareaBtn = document.getElementById('save-textarea-btn');
+
+// Event listeners for textarea expansion
+expandTextareaBtn.addEventListener('click', function() {
+    fullscreenTextarea.value = promptTextarea.value;
+    textareaModal.style.display = 'flex';
+    fullscreenTextarea.focus();
+});
+
+closeTextareaModal.addEventListener('click', function() {
+    promptTextarea.value = fullscreenTextarea.value;
+    textareaModal.style.display = 'none';
+});
+
+saveTextareaBtn.addEventListener('click', function() {
+    promptTextarea.value = fullscreenTextarea.value;
+    textareaModal.style.display = 'none';
+});
+
+// Close modal when clicking outside
+textareaModal.addEventListener('click', function(e) {
+    if (e.target === textareaModal) {
+        promptTextarea.value = fullscreenTextarea.value;
+        textareaModal.style.display = 'none';
+    }
+});
+
+// Handle Enter key in fullscreen textarea
+fullscreenTextarea.addEventListener('keydown', function(e) {
+    if (e.key === 'Enter' && !e.shiftKey) {
+        e.preventDefault();
+        promptTextarea.value = fullscreenTextarea.value;
+        textareaModal.style.display = 'none';
+        generateImage();
+    }
+});
 
     // History array
     let generationHistory = JSON.parse(localStorage.getItem('generationHistory')) || [];
