--- a/index.html
+++ b/index.html
@@ -992,7 +992,7 @@ footer {
 
 .footer-reset-btn {
     display: block;
-    margin: 15px auto 0;
+    margin: 15px auto 15px;
     padding: 8px 16px;
     background: var(--bg);
     color: var(--danger);
