--- a/index.html
+++ b/index.html
@@ -1237,6 +1237,9 @@ html {
     </button>
 </div>
         	<button id="clear-btn" title="Clear Prompt"><i class="fas fa-trash"></i> Clear</button>
+            <p style="font-size: 12px; color: #777; font-style: italic;">
+  Tuliskan dalam bahasa Inggris untuk hasil yang akurat
+            </p>
 <div class="input-group">
     <i class="fas fa-wand-magic-sparkles input-icon"></i>
     <textarea id="prompt-textarea" placeholder="Describe your dream image in detail... (e.g. A cyberpunk cityscape at night with neon lights, 8k ultra detailed, cinematic lighting)"></textarea>
