--- a/index.html
+++ b/index.html
@@ -1237,7 +1237,7 @@ html {
     </button>
 </div>
         	<button id="clear-btn" title="Clear Prompt"><i class="fas fa-trash"></i> Clear</button>
-            <p style="font-size: 12px; color: #777; font-style: italic;"><i class="fas fa-info"></i>
+            <p style="font-size: 12px; color: #777; font-style: italic;"><i class="fas fa-circle-info"></i>
   Tuliskan dalam bahasa Inggris untuk hasil yang akurat
             </p>
 <div class="input-group">
