--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Transform text into beautiful AI-generated artwork in various styles including photography, anime, digital painting and more.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://ruangriung.my.id">
-    <meta property="og:image" content="assets/logo.webp">
+    <meta property="og:image" content="assets/ruangriung.png">
     <!-- Favicon -->
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" sizes="180x180" href="logo.png">
