--- a/index.html
+++ b/index.html
@@ -1822,7 +1822,7 @@ html {
     powered by <a href="https://pollinations.ai" target="_blank" class="footer-link">Pollinations.ai</a> | 
     Develop with ♥️ by <a href="https://ariftirtana.my.id" target="_blank" class="footer-link">Arif Tirtana</a> | Thanks to <i class="fab fa-github"></i><a href="https://github.com" target="_blank" class="footer-link"> GitHub</a> &  <a href="https://www.cloudflare.com/" target="_blank" class="footer-link">Cloudflare</a> <i class="fas fa-cloud"></i>
 <button id="reset-all-btn" class="footer-reset-btn"><i class="fas fa-trash"></i> <span class="reset-all-text">Reset All Settings</span></button>
-            <a href="./changelog.html" target="_blank" class="back-button">Changelog <i class="fa fa-external-link" aria-hidden="true"></i> </a>
+            <a href="changelog/" target="_blank" class="back-button">Changelog <i class="fa fa-external-link" aria-hidden="true"></i> </a>
 <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
