--- a/index.html
+++ b/index.html
@@ -1464,7 +1464,8 @@ html {
                     <label for="style"><i class="fas fa-paint-brush"></i> Art Style</label>
                     <div class="select-container">
                         <i class="fas fa-paint-brush"></i>
-                        <select id="style">
+                       <select id="style">
+    <option value="" selected disabled>-- Select art Style (Optional) --</option>
                             <!-- Ultra Realism -->
                             <optgroup label="Ultra Realism">
                                 <option value="">Hyper Realistic</option>
@@ -1474,6 +1475,72 @@ html {
                                 <option value="sci-fi realism">Sci-Fi Realism</option>
                                 <option value="medical illustration">Medical Illustration</option>
                             </optgroup>
+                            
+                            <!-- Tambahkan setelah optgroup yang sudah ada -->
+<optgroup label="Specialized Techniques">
+    <option value="airbrush">Airbrush Art</option>
+    <option value="scratchboard">Scratchboard Art</option>
+    <option value="linocut print">Linocut Print</option>
+    <option value="woodblock print">Woodblock Print</option>
+    <option value="silkscreen">Silkscreen Printing</option>
+    <option value="engraving">Engraving</option>
+    <option value="mezzotint">Mezzotint</option>
+    <option value="lithography">Lithography</option>
+    <option value="etching">Etching</option>
+    <option value="drypoint">Drypoint</option>
+</optgroup>
+
+<optgroup label="Contemporary Styles">
+    <option value="street art">Street Art</option>
+    <option value="graffiti">Graffiti</option>
+    <option value="stencil art">Stencil Art</option>
+    <option value="pop surrealism">Pop Surrealism</option>
+    <option value="lowbrow art">Lowbrow Art</option>
+    <option value="urban contemporary">Urban Contemporary</option>
+    <option value="outsider art">Outsider Art</option>
+    <option value="naive art">Naive Art</option>
+    <option value="folk art">Folk Art</option>
+    <option value="visionary art">Visionary Art</option>
+</optgroup>
+
+<optgroup label="Digital & Mixed Media">
+    <option value="digital collage">Digital Collage</option>
+    <option value="mixed media">Mixed Media</option>
+    <option value="photo manipulation">Photo Manipulation</option>
+    <option value="vector art">Vector Art</option>
+    <option value="pixel art">Pixel Art</option>
+    <option value="vaporwave">Vaporwave Aesthetic</option>
+    <option value="synthwave">Synthwave</option>
+    <option value="outrun">Outrun Style</option>
+    <option value="cybergoth">Cybergoth</option>
+    <option value="y2k aesthetic">Y2K Aesthetic</option>
+</optgroup>
+
+<optgroup label="Illustration Styles">
+    <option value="editorial illustration">Editorial Illustration</option>
+    <option value="scientific illustration">Scientific Illustration</option>
+    <option value="botanical illustration">Botanical Illustration</option>
+    <option value="medical illustration">Medical Illustration</option>
+    <option value="technical drawing">Technical Drawing</option>
+    <option value="infographic">Infographic Style</option>
+    <option value="comic book">Comic Book Style</option>
+    <option value="graphic novel">Graphic Novel</option>
+    <option value="storyboard">Storyboard Style</option>
+    <option value="concept art">Concept Art</option>
+</optgroup>
+
+<optgroup label="Regional & Ethnic Styles">
+    <option value="african art">African Art</option>
+    <option value="aboriginal art">Aboriginal Art</option>
+    <option value="maori art">Maori Art</option>
+    <option value="native american">Native American Art</option>
+    <option value="aztec art">Aztec Art</option>
+    <option value="mayan art">Mayan Art</option>
+    <option value="inca art">Inca Art</option>
+    <option value="balinese art">Balinese Art</option>
+    <option value="javanese batik">Javanese Batik</option>
+    <option value="thai art">Thai Art</option>
+</optgroup>
 
                             <!-- Photography -->
                             <optgroup label="Photography Styles">
@@ -1818,11 +1885,11 @@ html {
     <i class="fas fa-arrow-up"></i>
 </div>
 <footer>
-    &copy; <span id="current-year"></span> RuangRiung AI Image Generator Ver.4.1.3. All rights reserved | 
+    &copy; <span id="current-year"></span> RuangRiung AI Image Generator Ver.5.0.1. All rights reserved | 
     powered by <a href="https://pollinations.ai" target="_blank" class="footer-link">Pollinations.ai</a> | 
     Develop with ♥️ by <a href="https://ariftirtana.my.id" target="_blank" class="footer-link">Arif Tirtana</a> | Thanks to <i class="fab fa-github"></i><a href="https://github.com" target="_blank" class="footer-link"> GitHub</a> &  <a href="https://www.cloudflare.com/" target="_blank" class="footer-link">Cloudflare</a> <i class="fas fa-cloud"></i>
 <button id="reset-all-btn" class="footer-reset-btn"><i class="fas fa-trash"></i> <span class="reset-all-text">Reset All Settings</span></button>
-            <a href="changelog/" target="_blank" class="back-button">Changelog <i class="fa fa-external-link" aria-hidden="true"></i> </a>
+            <a href="changelog.html" target="_blank" class="back-button">Changelog <i class="fa fa-external-link" aria-hidden="true"></i> </a>
 <!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
