--- a/index.html
+++ b/index.html
@@ -53,6 +53,18 @@
             </div>
         </div>
         
+<!-- Ad Banner Module 1 - Below Language Toggle -->
+<div class="ad-banner-module" id="adBanner1">
+    <div class="ad-loading">
+        <div class="spinner"></div>
+        <span class="ad-loading-text">Loading ad...</span>
+    </div>
+    <div class="ad-image-container">
+        <img class="ad-image" id="adImage1" alt="Advertisement">
+        <div class="ad-overlay">Iklan by RuangRiung</div>
+    </div>
+</div>
+
         <div class="card">
         	<div class="prompt-suggestions-container">
     <div class="prompt-suggestions" id="prompt-suggestions"></div>
@@ -82,6 +94,18 @@
     <i class="fas fa-comment-dots"></i>
     <span>AI Text Generation</span>
 </a>
+
+<!-- Ad Banner Module 2 - Below AI Text Generator -->
+<div class="ad-banner-module" id="adBanner2">
+    <div class="ad-loading">
+        <div class="spinner"></div>
+        <span class="ad-loading-text">Loading ad...</span>
+    </div>
+    <div class="ad-image-container">
+        <img class="ad-image" id="adImage2" alt="Advertisement">
+        <div class="ad-overlay">Iklan by RuangRiung</div>
+    </div>
+</div>
                 <div class="input-group">
     <!-- Existing input group code -->
 </div>
@@ -663,6 +687,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
         </div>
     </div>
 </div>
+<script src="assets/adBannerModule.js"></script>
 <script src="assets/models.js"></script>
 <script src="assets/ruangriung.js"></script>
 </body>
