--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <span class="ad-loading-text">Loading ad...</span>
     </div>
     <div class="ad-image-container">
-        <img class="ad-image" id="adImage1" alt="Advertisement">
+        <img class="ad-image" id="adImage1" alt="ruangriung">
         <div class="ad-overlay">Iklan by RuangRiung</div>
     </div>
 </div>
@@ -102,7 +102,7 @@
         <span class="ad-loading-text">Loading ad...</span>
     </div>
     <div class="ad-image-container">
-        <img class="ad-image" id="adImage2" alt="Advertisement">
+        <img class="ad-image" id="adImage2" alt="ruangriung">
         <div class="ad-overlay">Iklan by RuangRiung</div>
     </div>
 </div>
