--- a/index.html
+++ b/index.html
@@ -588,6 +588,17 @@
             </div>
             <div class="action-buttons">
                 <button class="btn btn-primary" id="download-btn"><i class="fas fa-download"></i> <span class="download-text">Download</span></button>
+                                <!-- Ad Banner 3 - Below Download Button -->
+<div class="ad-banner-module" id="adBanner3">
+    <div class="ad-loading">
+        <div class="spinner"></div>
+        <span class="ad-loading-text">Loading ad...</span>
+    </div>
+    <div class="ad-image-container">
+        <img class="ad-image" id="adImage3" alt="Advertisement">
+        <div class="ad-overlay">Iklan by RuangRiung</div>
+    </div>
+</div>
                 <button class="btn btn-secondary" id="share-btn"><i class="fas fa-share-alt"></i> <span class="share-text">Share</span></button>
                 <button class="btn btn-secondary" id="remix-btn"><i class="fas fa-random"></i> <span class="remix-text">Remix</span></button>
                 <button class="btn btn-secondary" id="variation-btn"><i class="fas fa-clone"></i> <span class="variation-text">Variation</span></button>
