--- a/index.html
+++ b/index.html
@@ -718,6 +718,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 </div>
 <!-- Add this before other script tags -->
 <div id="notification-container"></div>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="assets/coinSystem.js"></script>
 <script src="assets/adBannerModule.js"></script>
 <script src="assets/models.js"></script>
