--- a/changelog/index.html
+++ b/changelog/index.html
@@ -328,6 +328,30 @@
         
         <div class="changelog-container">
             <div class="version">
+                <div class="version">
+    <h2 class="version-title"><i class="fas fa-star"></i> Version 5.2.0</h2>
+    <div class="version-date">April 25, 2025</div>
+    <ul class="changes-list">
+        <li class="change-item">
+            <span class="change-type new">NEW</span> Enhanced image analysis with compression and streaming results
+        </li>
+        <li class="change-item">
+            <span class="change-type new">NEW</span> Improved coin management with visual feedback and animations
+        </li>
+        <li class="change-item">
+            <span class="change-type new">NEW</span> Redesigned textarea expansion for mobile devices
+        </li>
+        <li class="change-item">
+            <span class="change-type improved">IMPROVED</span> Optimized image generation flow with better error handling
+        </li>
+        <li class="change-item">
+            <span class="change-type fixed">FIXED</span> Resolved mobile layout issues with image analysis
+        </li>
+        <li class="change-item">
+            <span class="change-type fixed">FIXED</span> Fixed textarea expansion bugs on iOS devices
+        </li>
+    </ul>
+                </div>
                 <h2 class="version-title"><i class="fas fa-globe"></i> Version 5.1.0</h2>
                 <div class="version-date">April 21, 2025</div>
                 <ul class="changes-list">
