--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
         <button class="translate-btn" id="apply-translation">
           <i class="fas fa-check"></i> Apply to Prompt
         </button>
+        <button class="translate-btn" id="clear-translation">
+  <i class="fas fa-eraser"></i> Clear Text
+</button>
       </div>
     </div>
   </div>
