--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
     <link rel="manifest" href="manifest.json" />
   </head>
   <body>
+  	<div id="add-to-home-banner" style="display: none; position: fixed; top: 0; left: 0; right: 0; background-color: #6c5ce7; color: white; padding: 10px; text-align: center; z-index: 1000;">
+  <span>Tambahkan shortcut ke layar utama untuk akses cepat!</span>
+  <button id="add-to-home" style="background-color: #ffffff; color: #6c5ce7; border: none; padding: 5px 10px; cursor: pointer; font-weight: bold;">Tambah ke Home</button>
+</div>
     <div class="container">
       <header>
         <h1>
@@ -1118,7 +1122,7 @@
     </div>
     <!-- Add this before other script tags -->
     <div id="notification-container"></div>
-    <script>
+<script>
   let deferredPrompt;
 
   window.addEventListener('beforeinstallprompt', (e) => {
@@ -1126,26 +1130,21 @@
     e.preventDefault();
     deferredPrompt = e;
 
-    // Tampilkan tombol atau banner yang menawarkan untuk menambahkan ke home screen
-    const banner = document.createElement('div');
-    banner.innerHTML = `
-      <div style="background-color: #6c5ce7; color: white; padding: 10px; text-align: center;">
-        <span>Tambahkan shortcut ke layar utama untuk akses cepat!</span>
-        <button id="add-to-home" style="background-color: #ffffff; color: #6c5ce7; border: none; padding: 5px 10px; cursor: pointer;">Tambah ke Home</button>
-      </div>
-    `;
-    document.body.appendChild(banner);
+    // Tampilkan banner Add to Home
+    const banner = document.getElementById('add-to-home-banner');
+    banner.style.display = 'block';
 
     // Tanggapi klik pada tombol untuk menambahkan ke Home
     document.getElementById('add-to-home').addEventListener('click', () => {
+      // Tampilkan prompt
       deferredPrompt.prompt();
       deferredPrompt.userChoice
         .then((choiceResult) => {
-          console.log(choiceResult.outcome);
           if (choiceResult.outcome === 'accepted') {
             console.log('Pengguna menambahkan aplikasi ke layar utama');
           }
           deferredPrompt = null;
+          banner.style.display = 'none'; // Sembunyikan banner setelah diklik
         });
     });
   });
